--- a/src/MessagesBundle_en_US.properties
+++ b/src/MessagesBundle_en_US.properties
@@ -1,3 +1,4 @@
+chooseMenu = \nWho are you?\n\n1.User\n2.Employee\n
 menu1 = 1. Search a book by its ISBN\n2. Search a book by its title\n3. Register a new user\n4. Search user by ID\n5. Library register\n0. Exit\n
 menu2 = 1. Book this book\n2. Return this book to the library\n3. Exit.
 alreadyBooked = This book its already booked!
