--- a/src/MessagesBundle_sp_ES.properties
+++ b/src/MessagesBundle_sp_ES.properties
@@ -1,8 +1,10 @@
-menu1 = 1. Buscar libro por ISBN\n2. Buscar libro por titulo\n3. Registrar un nuevo usuario\n4. Buscar usuario por ID\n5. Registro de la biblioteca\n0. Salir
-menu2 = 1. Alquilar este libro\n2. Devolver este libro\n3. Salir.
+chooseMenu = \nQuien eres?\n\n1.Usuario\n2.Empleado\n
+menuEmployees = \n1.Contable\n2.Librero\n
+menu1 = \n1. Buscar libro por ISBN\n2. Buscar libro por titulo\n3. Registrar un nuevo usuario\n4. Buscar usuario por ID\n5. Registro de la biblioteca\n0. Salir\n
+menu2 = \n1. Alquilar este libro\n2. Devolver este libro\n3. Salir.\n
 alreadyBooked = This book its already booked!
 id = Dime tu id de usuario: 
-areadyLibrary = Its already in the library. 
+alreadyLibrary = Its already in the library. 
 bookReturned = Book returned!
 bookBooked = Book booked!
 title = Title: 
