--- a/src/MessagesBundle_en_US.properties
+++ b/src/MessagesBundle_en_US.properties
@@ -1,6 +1,11 @@
-chooseMenu = \nWho are you?\n\n1.User\n2.Employee\n
-menu1 = 1. Search a book by its ISBN\n2. Search a book by its title\n3. Register a new user\n4. Search user by ID\n5. Library register\n0. Exit\n
-menu2 = 1. Book this book\n2. Return this book to the library\n3. Exit.
+chooseMenu = \nWho are you?\n 1. Employee\n 2. User\n
+menuEmployees = \n 1. Contable\n 2. Librarian\n
+password = Introduce employees password
+correct = Correct!\n
+nicetry = Try again!
+IncorrectRange = Incorrect number of chars.
+menu1 =  1. Search a book by its ISBN\n 2. Search a book by its title\n 3. Register a new user\n 4. Search user by ID\n 5. Library register\n 0. Exit\n
+menu2 =  1. Book this book\n 2. Return this book to the library\n 3. Exit.
 alreadyBooked = This book its already booked!
 id = Dime tu id de usuario: 
 areadyLibrary = Its already in the library. 
