--- a/src/MessagesBundle_sp_ES.properties
+++ b/src/MessagesBundle_sp_ES.properties
@@ -1,6 +1,10 @@
-chooseMenu = \nQuien eres?\n\n1.Usuario\n2.Empleado\n
-menuEmployees = \n1.Contable\n2.Librero\n
-menu1 = \n1. Buscar libro por ISBN\n2. Buscar libro por titulo\n3. Registrar un nuevo usuario\n4. Buscar usuario por ID\n5. Registro de la biblioteca\n0. Salir\n
+chooseMenu = \nQuien eres?\n 1. Empleado\n 2. Usuario\n
+menuEmployees = \n 1. Contable\n 2. Librero\n
+password = Introduce la contraseña de empleados
+correct = Correcto!\n
+nicetry = Intentelo de nuevo!
+IncorrectRange = Numero de caracteres incorrecto.
+menu1 = \n 1. Buscar libro por ISBN\n 2. Buscar libro por titulo\n 3. Registrar un nuevo usuario\n 4. Buscar usuario por ID\n 5. Registro de la biblioteca\n 0. Salir\n
 menu2 = \n1. Alquilar este libro\n2. Devolver este libro\n3. Salir.\n
 alreadyBooked = This book its already booked!
 id = Dime tu id de usuario: 
