--- a/src/MessagesBundle_en_US.properties
+++ b/src/MessagesBundle_en_US.properties
@@ -23,3 +23,22 @@ ask4delete = Do you want to delete this user?
 deleted = Deleted! 
 userNotFound = User not found! 
 isbn = ISBN: 
+hiredyear = Hired year in this company:
+retribution = Retribution: 
+nIngresos = How many deposits do you want to do?
+deposit = Insert the deposit number:
+thisBook = The book with that isbn is: 
+endTransaction = end transaction
+final = final balance: 
+afterRetirement = your balance after retirment
+afterDeposit = your balance after deposit
+bookNeeded = What book do you need(isbn)?
+price = This book's price is: 
+howMany = How many do you need?
+moreMovements = Do you want to do more movements? Yess: press 0, No: press 1.
+tramited = This order has been tramited to your contable! 
+hireEmployee = You want to hire a ...\n1: Contable\n2: Librarian\n3:Human Resources\n
+booked = is returned since
+return = and should be returned on 
+returned = was returned
+IncompatibleString = Incompatible String
