--- a/src/MessagesBundle_sp_ES.properties
+++ b/src/MessagesBundle_sp_ES.properties
@@ -7,7 +7,7 @@ IncorrectRange = Numero de caracteres incorrecto.
 menu1 = \n 1. Buscar libro por ISBN\n 2. Buscar libro por titulo\n 3. Registrar un nuevo usuario\n 4. Buscar usuario por ID\n 5. Registro de la biblioteca\n 0. Salir\n
 menu2 = \n1. Alquilar este libro\n2. Devolver este libro\n3. Salir.\n
 alreadyBooked = This book its already booked!
-id = Dime tu id de usuario: 
+id = ID: 
 alreadyLibrary = Its already in the library. 
 bookReturned = Book returned!
 bookBooked = Book booked!
@@ -21,5 +21,24 @@ registered = : registrado!
 searchresult1 = "You are looking for: "
 ask4delete = Do you want to delete this user? 
 deleted = Deleted! 
-userNotFound = User not found! 
+notFound = Not found! 
 isbn = ISBN: 
+hiredyear = Año de contratacion en esta empresa:
+retribution = Retribucion: 
+nIngresos = ¿Cuantos ingresos quieres hacer?
+deposit = Ingrese el deposito numero:
+thisBook = El libro con ese isbn es: 
+endTransaction = finaliza la transaccion 
+final = Saldo final: 
+afterRetirement = el saldo despues del retiro 
+afterDeposit = el saldo despues del deposito 
+bookNeeded = ¿Que libro necesitas?
+price = El precio de este libro es: 
+howMany = ¿Cuantos necesitas?
+moreMovements = Deseas hacer mas movimientos? Si: pulse 0, No: pulse 1.
+tramited = Este pedido ha sido tramitado a tu contable! 
+hireEmployee = Quieres contratar a ...\n1: Contable\n2: Librero\n3:Recursos Humanos\n
+booked = esta alquilado desde 
+return = y deberá ser devuelto el 
+returned = fue devuelto el
+IncompatibleString = Incompatible String
